2000-05-24  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el: Add `CNET Japan' support.
	(nnshimbun-make-date-string): New function.
	(nnshimbun-asahi-get-headers): Use nnshimbun-make-date-string.
	(nnshimbun-sponichi-get-headers): Ditto.

2000-05-24  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-retrieve-url): Add argument to
	ignore w3's cache.

2000-05-24  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-group.el (gnus-group-make-shimbun-group): Add
	completion to the shimbun address; delete empty strings from
	`gnus-group-shimbun-type-history' and
	`gnus-group-shimbun-address-history'.

	* lisp/nnshimbun.el (nnshimbun-asahi-get-headers): Don't use
	`timezone'.
	(nnshimbun-type-definition): Add address.

2000-05-23  Tatsuya Ichikawa <ichikawa@erc.epson.com>

	* lisp/nnshimbun.el: Add `sponichi' support.

2000-05-23  KOSEKI Yoshinori  <kose@wizard.tamra.co.jp>

	* lisp/nnshimbun.el (nnshimbun-mime-encode-string): Fix wrong
	close brackets.

2000-05-23  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el: Change coding-system.

2000-05-21  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* texi/gnus-ja.texi (nnshimbun): Add description.

2000-05-21  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 02.

	* lisp/dgnushack.el (dgnushack-texi-format): Fix last change.

2000-05-21  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el: New backend.

	* lisp/gnus-group.el (gnus-group-make-shimbun-group): New command.

2000-05-17  Kenichi OKADA <okada@opaopa.org>

	* lisp/imap.el (imap-digest-md5-auth): Rewrite for the use of
	`sasl-digest-md5-digest-response' instead of
	`digest-md5-digest-response'.
	(TopLevel): Require `sasl' when compiling instead of `digest-md5';
	don't autoload "digest-md5".

2000-05-17  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nndraft.el (nndraft-request-replace-article): Replace